--- a/ios/ReactNativeWithNativeModuleTest/Info.plist
+++ b/ios/ReactNativeWithNativeModuleTest/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.transistorsoft.fetch</string>
+	</array>
 	<key>CFBundleDisplayName</key>
 	<string>ReactNativeWithNativeModuleTest</string>
 	<key>CFBundleExecutable</key>
