--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.reactnativewithnativemoduletest">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
    
     <application
       android:name=".MainApplication"
@@ -21,7 +23,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-       <service android:name="com.reactnativewithnativemoduletest.MyTaskService" />
+      <service android:name="com.reactnativewithnativemoduletest.MyTaskService" />
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
